--- a/_includes/master/manifests/calico-kube-controllers.yaml
+++ b/_includes/master/manifests/calico-kube-controllers.yaml
@@ -37,7 +37,7 @@ spec:
         - name: cnx-pull-secret
       containers:
         - name: calico-kube-controllers
-          image: {{.Values.imageRegistry}}{{.Values.kubeControllers.image}}:{{ .Values.kubeControllers.tag }}
+          image: {{.Values.kubeControllers.image}}:{{ .Values.kubeControllers.tag }}
           env:
             # The location of the etcd cluster.
             - name: ETCD_ENDPOINTS
@@ -126,7 +126,7 @@ spec:
       serviceAccountName: calico-kube-controllers
       containers:
         - name: calico-kube-controllers
-          image: {{.Values.imageRegistry}}{{.Values.kubeControllers.image}}:{{ .Values.kubeControllers.tag }}
+          image: {{.Values.kubeControllers.image}}:{{ .Values.kubeControllers.tag }}
           env:
             # Choose which controllers to run.
             - name: ENABLED_CONTROLLERS
