--- a/_includes/master/manifests/tigera-federation-controller.yaml
+++ b/_includes/master/manifests/tigera-federation-controller.yaml
@@ -9,7 +9,6 @@ tigera-federation-controller.yaml acccepts the following include flags:
 | datastore        | kdd, etcd                     |
 
 */ -}}
-# This manifest deploys the {{.Values.prodname}} Federated Identity controller.
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
@@ -58,7 +57,7 @@ spec:
             - name: COMPACTION_PERIOD
               value: "0"
 {{- if eq .Values.datastore "etcd" }}
-            # The location of the {{.Values.prodname}} etcd cluster.
+            # The location of the etcd cluster.
             - name: ETCD_ENDPOINTS
               valueFrom:
                 configMapKeyRef:
