--- a/_data/master/navbars/reference.yml
+++ b/_data/master/navbars/reference.yml
@@ -178,3 +178,5 @@ toc:
     path: /reference/legal/node
   - title: Typha attributions
     path: /reference/legal/typha
+  - title: kube-controllers attributions
+    path: /reference/legal/kube-controllers
