6586 Felix calculates DNS members (additional review comments 2.0)

--- a/glide.yaml
+++ b/glide.yaml
@@ -41,7 +41,8 @@ import:
   subpackages:
   - types
 - package: github.com/projectcalico/libcalico-go
-  repo:    git@github.com:tigera/libcalico-go-private
+#  repo:    git@github.com:tigera/libcalico-go-private
+  repo: ~/Work/go/src/github.com/tigera/libcalico-go-private-neil
   subpackages:
   - lib/apiconfig
   - lib/apis/v3
