--- a/_data/master/navbars/getting-started.yml
+++ b/_data/master/navbars/getting-started.yml
@@ -58,9 +58,7 @@ toc:
     section:
     - title: Overview
       path: /getting-started/bare-metal/installation/
-    - title: Binary install with package manager
-      path: /getting-started/bare-metal/installation/binary-mgr
-    - title: Binary install without package manager
+    - title: Binary install
       path: /getting-started/bare-metal/installation/binary
     - title: Container install
       path: /getting-started/bare-metal/installation/container
