--- a/master/getting-started/kubernetes/installation/federation-rem-rbac-kdd.yaml
+++ b/master/getting-started/kubernetes/installation/federation-rem-rbac-kdd.yaml
@@ -3,7 +3,7 @@ layout: null
 ---
 
 # {{site.prodname}} Version {{site.data.versions[page.version].first.title}}
-# {{site.baseurl}}/{{page.version}}/releases#{{site.data.versions[page.version].first.title}}
+# {{site.url}}/{{page.version}}/releases#{{site.data.versions[page.version].first.title}}
 
 ---
 
