--- a/master/getting-started/kubernetes/installation/hosted/calicoctl.yaml
+++ b/master/getting-started/kubernetes/installation/hosted/calicoctl.yaml
@@ -2,7 +2,7 @@
 layout: null
 ---
 # {{site.prodname}} Version {{site.data.versions[page.version].first.title}}
-# {{site.baseurl}}/{{page.version}}/releases#{{site.data.versions[page.version].first.title}}
+# {{site.url}}/{{page.version}}/releases#{{site.data.versions[page.version].first.title}}
 # This manifest includes the following component versions:
 #   calico/ctl:{{site.data.versions[page.version].first.components["calicoctl"].version}}
 
