--- a/master/getting-started/kubernetes/installation/hosted/calicoq.yaml
+++ b/master/getting-started/kubernetes/installation/hosted/calicoq.yaml
@@ -2,7 +2,7 @@
 layout: null
 ---
 # {{site.prodname}} Version {{site.data.versions[page.version].first.title}}
-# {{site.baseurl}}{{page.version}}/releases#{{site.data.versions[page.version].first.title}}
+# {{site.url}}{{page.version}}/releases#{{site.data.versions[page.version].first.title}}
 # This manifest includes the following component versions:
 #   {{site.data.versions[page.version].first.dockerRepo}}/{{site.imageNames["calicoq"]}}:{{site.data.versions[page.version].first.components["calicoq"].version}}
 
