--- a/_includes/v2.2/manifests/cnx.yaml
+++ b/_includes/v2.2/manifests/cnx.yaml
@@ -315,7 +315,7 @@ spec:
         - name: cnx-pull-secret
       containers:
       - name: cnx-apiserver
-        image: {{site.data.versions[page.version].first.dockerRepo}}/{{site.imageNames["cnxApiserver"]}}:{{site.data.versions[page.version].first.components["cnx-apiserver"].version}}
+        image: {{page.registry}}/{{site.imageNames["cnxApiserver"]}}:{{site.data.versions[page.version].first.components["cnx-apiserver"].version}}
         args:
           - "--secure-port=5443"
 {%- if include.platform == "eks" %}
@@ -383,7 +383,7 @@ spec:
           privileged: true
 {%- endif %}
       - name: cnx-queryserver
-        image: {{site.data.versions[page.version].first.dockerRepo}}/{{site.imageNames["cnxQueryserver"]}}:{{site.data.versions[page.version].first.components["cnx-queryserver"].version}}
+        image: {{page.registry}}/{{site.imageNames["cnxQueryserver"]}}:{{site.data.versions[page.version].first.components["cnx-queryserver"].version}}
         env:
           # Set queryserver logging to "info"
           - name: LOGLEVEL
@@ -510,7 +510,7 @@ spec:
           name: cnx-manager-tls
       containers:
       - name: cnx-manager
-        image: {{site.data.versions[page.version].first.dockerRepo}}/{{site.imageNames["cnxManager"]}}:{{site.data.versions[page.version].first.components["cnx-manager"].version}}
+        image: {{page.registry}}/{{site.imageNames["cnxManager"]}}:{{site.data.versions[page.version].first.components["cnx-manager"].version}}
         env:
           - name: CNX_WEB_AUTHENTICATION_TYPE
             valueFrom:
@@ -580,7 +580,7 @@ spec:
           initialDelaySeconds: 90
           periodSeconds: 10
       - name: cnx-manager-proxy
-        image: {{site.data.versions[page.version].first.dockerRepo}}/{{site.imageNames["cnxManagerProxy"]}}:{{site.data.versions[page.version].first.components["cnx-manager-proxy"].version}}
+        image: {{page.registry}}/{{site.imageNames["cnxManagerProxy"]}}:{{site.data.versions[page.version].first.components["cnx-manager-proxy"].version}}
         env:
           - name: CNX_WEB_AUTHENTICATION_TYPE
             valueFrom:
