--- a/_includes/v2.3/manifests/calico-kube-controllers.yaml
+++ b/_includes/v2.3/manifests/calico-kube-controllers.yaml
@@ -45,7 +45,7 @@ spec:
         - name: cnx-pull-secret
       containers:
         - name: calico-kube-controllers
-          image: {{site.data.versions[page.version].first.dockerRepo}}/{{site.imageNames["kubeControllers"]}}:{{site.data.versions[page.version].first.components["cnx-kube-controllers"].version}}
+          image: {{page.registry}}/{{site.imageNames["kubeControllers"]}}:{{site.data.versions[page.version].first.components["cnx-kube-controllers"].version}}
           env:
             # The location of the {{site.prodname}} etcd cluster.
             - name: ETCD_ENDPOINTS
