--- a/v2.0/getting-started/docker/installation/vagrant-coreos/Vagrantfile
+++ b/v2.0/getting-started/docker/installation/vagrant-coreos/Vagrantfile
@@ -57,7 +57,7 @@ Vagrant.configure("2") do |config|
 
       # Pre-load the calico/node image.  This slows down the vagrant up
       # command, but speeds up the actual tutorial.
-      host.vm.provision :docker, images: ["{{site.data.versions[page.version].first.dockerRepo}}/{{site.imageNames["node"]}}:#{calico_node_ver}", "busybox:latest"]
+      host.vm.provision :docker, images: ["{{page.registry}}/{{site.imageNames["node"]}}:#{calico_node_ver}", "busybox:latest"]
 
       # Use a different cloud-init on the first server.
       if i == 1
