--- a/v2.2/getting-started/kubernetes/installation/manifests/app-layer-policy/istio-inject-configmap.yaml
+++ b/v2.2/getting-started/kubernetes/installation/manifests/app-layer-policy/istio-inject-configmap.yaml
@@ -146,7 +146,7 @@ data:
         - mountPath: /var/run/dikastes
           name: dikastes-sock
       - name: dikastes
-        image: {{site.data.versions[page.version].first.dockerRepo}}/{{site.imageNames["dikastes"]}}:{{site.data.versions[page.version].first.components["dikastes"].version}}
+        image: {{page.registry}}/{{site.imageNames["dikastes"]}}:{{site.data.versions[page.version].first.components["dikastes"].version}}
         args: ["/dikastes", "server", "-l", "/var/run/dikastes/dikastes.sock", "-d", "/var/run/felix/nodeagent/socket"]
         volumeMounts:
         - mountPath: /var/run/dikastes
