--- a/_data/versions.yml
+++ b/_data/versions.yml
@@ -862,3 +862,9 @@ master:
       version: master
     flannel:
       version: v0.9.1
+    compliance-server:
+      version: master
+    compliance-controller:
+      version: master
+    compliance-snapshotter:
+      version: master
