--- a/_config.yml
+++ b/_config.yml
@@ -69,14 +69,14 @@ defaults:
       version: master
       sitemap: true
       # By default, released builds are pulled from quay.
-      registry: quay.io 
+      registry: quay.io/
   -
     scope:
       path: master
     values:
       version: master
       # Master builds are pulled from GCR.
-      registry: gcr.io/unique-caldron-775/cnx
+      registry: gcr.io/unique-caldron-775/cnx/
   -
     scope:
       path: v2.0
