--- a/_includes/v2.3/manifests/cnx.yaml
+++ b/_includes/v2.3/manifests/cnx.yaml
@@ -75,7 +75,7 @@ data:
   # Enable ALP support in the UI
   tigera.cnx-manager.alp-support: "false"
   # The name of the cluster.  This field is used as part of the index name of Elasticsearch logs, and is intended
-  # to allow multiple clusters to share one Elasticsearch cluster.  The value of this field must match that of 
+  # to allow multiple clusters to share one Elasticsearch cluster.  The value of this field must match that of
   # ELASTIC_INDEX_SUFFIX in tigera-fluentd-node.
   tigera.cnx-manager.cluster-name: "cluster"
 
@@ -374,7 +374,7 @@ spec:
         - name: cnx-pull-secret
       containers:
       - name: cnx-apiserver
-        image: {{page.registry}}/{{site.imageNames["cnxApiserver"]}}:{{site.data.versions[page.version].first.components["cnx-apiserver"].version}}
+        image: {{page.registry}}{{site.imageNames["cnxApiserver"]}}:{{site.data.versions[page.version].first.components["cnx-apiserver"].version}}
         args:
           - "--secure-port=5443"
 {%- if include.platform == "eks" %}
@@ -442,7 +442,7 @@ spec:
           privileged: true
 {%- endif %}
       - name: cnx-queryserver
-        image: {{page.registry}}/{{site.imageNames["cnxQueryserver"]}}:{{site.data.versions[page.version].first.components["cnx-queryserver"].version}}
+        image: {{page.registry}}{{site.imageNames["cnxQueryserver"]}}:{{site.data.versions[page.version].first.components["cnx-queryserver"].version}}
         env:
           # Set queryserver logging to "info"
           - name: LOGLEVEL
@@ -597,7 +597,7 @@ spec:
           name: cnx-manager-tls
       containers:
       - name: cnx-manager
-        image: {{page.registry}}/{{site.imageNames["cnxManager"]}}:{{site.data.versions[page.version].first.components["cnx-manager"].version}}
+        image: {{page.registry}}{{site.imageNames["cnxManager"]}}:{{site.data.versions[page.version].first.components["cnx-manager"].version}}
         env:
           - name: CNX_WEB_AUTHENTICATION_TYPE
             valueFrom:
@@ -672,7 +672,7 @@ spec:
           initialDelaySeconds: 90
           periodSeconds: 10
       - name: cnx-manager-proxy
-        image: {{page.registry}}/{{site.imageNames["cnxManagerProxy"]}}:{{site.data.versions[page.version].first.components["cnx-manager-proxy"].version}}
+        image: {{page.registry}}{{site.imageNames["cnxManagerProxy"]}}:{{site.data.versions[page.version].first.components["cnx-manager-proxy"].version}}
         env:
           - name: CNX_WEB_AUTHENTICATION_TYPE
             valueFrom:
