--- a/_includes/v2.3/manifests/monitor-calico.yaml
+++ b/_includes/v2.3/manifests/monitor-calico.yaml
@@ -24,7 +24,7 @@ metadata:
   namespace: calico-monitoring
 data:
   # The name of the cluster.  This field is used as part of the index name of Elasticsearch logs, and is intended
-  # to allow multiple clusters to share one Elasticsearch cluster.  The value of this field must match that of 
+  # to allow multiple clusters to share one Elasticsearch cluster.  The value of this field must match that of
   # tigera.cnx-manager.cluster-name in tigera-cnx-manager-config.
   tigera.elasticsearch.cluster-name: "cluster"
   # The number of shards for index tigera_secure_ee_flows.
@@ -453,7 +453,7 @@ spec:
               mountPath: /var/log/calico
       containers:
         - name: fluentd
-          image: {{page.registry}}/{{site.imageNames["fluentd"]}}:{{site.data.versions[page.version].first.components["fluentd"].version}}
+          image: {{page.registry}}{{site.imageNames["fluentd"]}}:{{site.data.versions[page.version].first.components["fluentd"].version}}
           env:
             - name: ELASTIC_INDEX_SUFFIX
               valueFrom:
@@ -678,10 +678,10 @@ spec:
             - key: node-role.kubernetes.io/master
               effect: NoSchedule
           imagePullSecrets:
-            - name: cnx-pull-secret      
+            - name: cnx-pull-secret
           containers:
             - name: tigera-es-curator
-              image: {{page.registry}}/{{site.imageNames["es-curator"]}}:{{site.data.versions[page.version].first.components["es-curator"].version}}
+              image: {{page.registry}}{{site.imageNames["es-curator"]}}:{{site.data.versions[page.version].first.components["es-curator"].version}}
               env:
                 - name: ELASTIC_INDEX_SUFFIX
                   valueFrom:
@@ -766,36 +766,36 @@ spec:
         - name: cnx-pull-secret
       containers:
       - name: install
-        image: {{page.registry}}/{{site.imageNames["elastic-tsee-installer"]}}:{{site.data.versions[page.version].first.components["elastic-tsee-installer"].version}}
+        image: {{page.registry}}{{site.imageNames["elastic-tsee-installer"]}}:{{site.data.versions[page.version].first.components["elastic-tsee-installer"].version}}
         env:
 {%- if include.secure_es == "true" %}
           - name: ELASTIC_HOST
-            valueFrom: 
+            valueFrom:
               configMapKeyRef:
                 name: tigera-es-proxy
                 key: elasticsearch.backend.host
           - name: ELASTIC_PORT
-            valueFrom: 
+            valueFrom:
               configMapKeyRef:
                 name: tigera-es-proxy
                 key: elasticsearch.backend.port
           - name: KIBANA_HOST
-            valueFrom: 
+            valueFrom:
               configMapKeyRef:
                 name: tigera-es-proxy
                 key: kibana.backend.host
           - name: KIBANA_PORT
-            valueFrom: 
+            valueFrom:
               configMapKeyRef:
                 name: tigera-es-proxy
                 key: kibana.backend.port
           - name: USER
-            valueFrom: 
+            valueFrom:
               secretKeyRef:
                 name: elastic-ee-installer
                 key: username
           - name: PASSWORD
-            valueFrom: 
+            valueFrom:
               secretKeyRef:
                 name: elastic-ee-installer
                 key: password
@@ -812,13 +812,13 @@ spec:
           - name: ELASTIC_HOST
             value: elasticsearch-tigera-elasticsearch.calico-monitoring.svc.cluster.local
           - name: ELASTIC_PORT
-            value: "9200" 
+            value: "9200"
           - name: KIBANA_HOST
-            value: kibana-tigera-elasticsearch.calico-monitoring.svc.cluster.local 
+            value: kibana-tigera-elasticsearch.calico-monitoring.svc.cluster.local
           - name: KIBANA_PORT
-            value: "80" 
+            value: "80"
           - name: ELASTIC_SCHEME
-            value: "http" 
+            value: "http"
           - name: KIBANA_SCHEME
             value: "http"
           - name: START_XPACK_TRIAL
@@ -840,7 +840,7 @@ spec:
 
 {%- if include.elasticsearch == "operator" %}
 ---
-# Allow access to Elasticsearch client nodes from Kibana, fluentd, and the 
+# Allow access to Elasticsearch client nodes from Kibana, fluentd, and the
 # intrusion dection installer
 apiVersion: projectcalico.org/v3
 kind: NetworkPolicy
